--- a/francesinha_wiki/templates/francesinha/francesinha_delete.html
+++ b/francesinha_wiki/templates/francesinha/francesinha_delete.html
@@ -1,10 +1,14 @@
 {%extends 'base.html'%}
 
 {% block content %}
-
-<form action ='.'method='POST'>{% csrf_token %}
-    <p>Are you sure you want to delete '{{ object.name }}'?</p>
-    <p><input type = 'submit' value = 'Confirm'> <a href= '../'>Cancel</a></p>
-</form>
+<div class = "confirmation-form">
+    <form action ='.'method='POST'>{% csrf_token %}
+        <p>Are you sure you want to delete '{{ object.name }}'?</p>
+        <p>
+            <input type = 'submit' value = 'Confirm'> 
+            <a href= '../'>Cancel</a>
+        </p>
+    </form>
+</div>
 
 {% endblock %}
