--- a/francesinha_wiki/templates/francesinha/francesinha_update.html
+++ b/francesinha_wiki/templates/francesinha/francesinha_update.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
+<div class="update-form-container">
     <h2>Update Francesinha</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Update</button>
     </form>
+</div>
 {% endblock %}
