--- a/francesinha_wiki/templates/restaurants/restaurant_update.html
+++ b/francesinha_wiki/templates/restaurants/restaurant_update.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Update Restaurant</h2>
+<div class="update-form-container">
+    <h2 class="center-text"=>Update Restaurant</h2>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Update</button>
     </form>
+</div>
 {% endblock %}
