--- a/francesinha_wiki/templates/home.html
+++ b/francesinha_wiki/templates/home.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
-{% block content%}
+{% block content %}
 
-<h1>Welcome to the Francesinha Wiki!</h1>
-<p>This is the home page of our website.</p>
+<div class="home-container">
+    <h1>Welcome to the Francesinha Wiki!</h1>
+    <p>This is the home page of our website.</p>
 
-{% load static %}
-<img src="{% static 'banner.png' %}" alt="Francesinha Banner" width="500" height="300">
-{% endblock%}
+    {% load static %}
+    <img src="{% static 'banner.png' %}" alt="Francesinha Banner">
+</div>
 
+{% endblock %}
