--- a/francesinha_wiki/templates/ingredients/ingredients_create.html
+++ b/francesinha_wiki/templates/ingredients/ingredients_create.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1 class ="center-text">Create a new Francesinha</h1>
-<form method = 'POST' enctype="multipart/form-data"> 
+<h1 class ="center-text">Create a new Ingredient</h1>
+<form method = 'POST'> 
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value= "Save">
