--- a/francesinha_wiki/templates/restaurants/restaurant_create.html
+++ b/francesinha_wiki/templates/restaurants/restaurant_create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class = "center-text">Create a new Restaurant</h1>
-<form method = 'POST'> {% csrf_token %}
+<form method = 'POST' enctype="multipart/form-data"> {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value= "Save">
 </form>
