--- a/francesinha_wiki/templates/restaurants/restaurant_individual.html
+++ b/francesinha_wiki/templates/restaurants/restaurant_individual.html
@@ -20,6 +20,12 @@
         <p>Without Francesinhas</p>
     {% endif %}
 
+    {% if objects.image %}
+        <img src="{{ objects.image.url }}">
+    {% else %}
+        <p>No image</p>
+    {% endif %}
+
     <div class="button-container">
         <a href="{% url 'restaurant-remove' objects.id %}"class = "delete-button">Remove</a>
         <a href="{% url 'restaurant-update' objects.id %}" class="update-button">Update</a>
